# UR10e_Arm_With_Lift

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: controllers.yaml  joint_limits.yaml  ur_with_lift_controllers.yaml  ur_with_lift_servo.yaml
launch/: ur_with_lift_moveit.launch.py  ur_with_lift_sim_control.launch.py  ur_with_lift_sim_moveit.launch.py  view_ur_with_lift.py
rviz/: moveit_robot.rviz  view_robot.rviz
src/: draw_circle_cartesian.cpp  go_to_point.cpp
srdf/: ur_with_lift.srdf.xacro  ur_with_lift_macro.srdf.xacro
urdf/: ur10e_with_lift.ros2_control.xacro  ur10e_with_lift.urdf.xacro  ur10e_with_lift_macro.xacro
urdf/inc/: ur_transmissions.xacro  ur_with_lift_transmissions.xacro
