<?xml version="1.0"?>
<package format="3">
  <name>ur10e_with_lift</name>
  <version>0.0.1</version>
  <description>UR10e Robot with prismatic joint</description>

  <maintainer email="rishabh.m96@gmail.com">Rishabh Mukund</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>
